--- a/es2/css/indexstyle.css
+++ b/es2/css/indexstyle.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Merriweather:400italic,400,700,700italic);
-@import url(http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic);
+@import url(https://fonts.googleapis.com/css?family=Merriweather:400italic,400,700,700italic);
+@import url(https://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic);
 html {
     overflow-y: scroll;
     height: 100%;
