--- a/es2/g3_migration_films/css/style.css
+++ b/es2/g3_migration_films/css/style.css
@@ -1,6 +1,6 @@
 /* Typography */
-@import url(http://fonts.googleapis.com/css?family=Merriweather:400italic,400,700,700italic);
-@import url(http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic);
+@import url(https://fonts.googleapis.com/css?family=Merriweather:400italic,400,700,700italic);
+@import url(https://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic);
 
 
 body{
