--- a/es2/g5_openaccess/css/style.css
+++ b/es2/g5_openaccess/css/style.css
@@ -5,8 +5,8 @@
 
 
 /* Typography */
-@import url(http://fonts.googleapis.com/css?family=Merriweather:400italic,400,700,700italic);
-@import url(http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic);
+@import url(https://fonts.googleapis.com/css?family=Merriweather:400italic,400,700,700italic);
+@import url(https://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic);
 
 
 body{
